test-suite/typecheck/fail/mutable_in_pure_function.first
function f() -> Int {
  var x: Int = 10;
  return x;
}
